# samgov-watch

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  discord.md  flow.md  pyproject.toml
.claude/commands/: summarize-opps.md
docs/: discord.md  setup.md  sharepoint.md
src/samgov_sync/: cli.py  config.py  graph_client.py  ollama_client.py  pipeline.py  sam_client.py  sync.py
src/samgov_sync/posters/: __init__.py  base.py  discord.py  file.py  sharepoint.py
