[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samgov-sync"
version = "0.1.0"
description = "Search SAM.gov and sync results to a SharePoint list"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "msal>=1.24",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "procurement-tools>=0.2.2",
    "httpx>=0.24",
]

[project.scripts]
samgov-sync = "samgov_sync.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/samgov_sync"]
